4.9.1

2011-04-11  Sam Varshavchik  <mrsam@courier-mta.com>

	* tcpd/libcouriertls.c (tls_create): Remove SSLv2_method().
	(tls_create): Remove "!SSLv2" from the default TLS_CIPHER_LIST.

2011-04-07  Sam Varshavchik  <mrsam@courier-mta.com>

	* mkimapdcert.in (prefix): Create imapd.pem with 600 perms.

	* mkpop3dcert.in (prefix): Create pop3d.pem with 600 perms.

4.9.0

2011-03-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* unicode/unicode.h: Added unicode_isspace().

	* unicode/unicode_wordbreak.c: Implementation of tr29.

	* unicode/unicode.h: unicode_lb_set_opts(), plus derivatives: set
	artbirary linebreaking options. Two options that tailor the unicode
	linebreaking algorithm.

2011-03-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* unicode/unicode.c (convert_flush_iconv): Save errno in case it
	gets clobbered by the callback function.

2011-02-26  Sam Varshavchik  <mrsam@courier-mta.com>

	* unicode/unicode.h (mail): Added iterator-based conversion functions
	to/from unicode chars.

2011-02-24  Sam Varshavchik  <mrsam@courier-mta.com>

	* unicode/unicode.c (save_unicode): Optimize buffering of
	unicode characters.

2011-02-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* unicode/unicode.h: Adjust unicode_wcwidth() to return 0 for BK, CR,
	LF, CM, NL, WJ, ZW characters.

2011-02-16  Sam Varshavchik  <mrsam@courier-mta.com>

	* unicode/unicode.h: Internal implementation if tr14, linebreaking
	rules.

2011-01-24  Sam Varshavchik  <mrsam@courier-mta.com>

	* rfc822/rfc2047.c (rfc2047_encode_callback): Rewrite broken logic.

	* unicode/unicode.c (deinit_iconv): Incomplete multibyte character
	remaining at the end of conversion was falsely being reported as
	a callback failure, rather than a conversion failure.

2011-01-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* Check if -liconv is needed to get iconv.

	* Clean up leftover unicode-related crud in configure scripts.

2011-01-22  Gordon Messmer <yinyang@eburg.com>
