@@ -1,3 +1,7 @@
+2011-05-06  Thomas Jacob <jacob@internet24.de>
+
+	* unicode/unicode.c: Compilation fixes.
+
 5.5.1
 
 2011-04-13  Sam Varshavchik  <mrsam@courier-mta.com>
